# mailing_bot

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  a.txt  alembic.ini  bot_entrypoint.sh  celerybeat-schedule  docker-compose-for-tests.yml  docker-compose-prod.yml  docker-compose.yml  image-tag-dev.env  pyproject.toml
k8s/: deployment.yml  kustomization.yml
k8s-dev/: deployment.yml  kustomization.yml  kustomization.yml-e
src/: config.py
src/common/: bot.py  celery.py  container.py  db.py  http_client.py  logging.py  scheduler.py  start_up.py  telegram_clients.py  utils.py
src/common/dto/: base.py
src/common/exceptions/: weather.py
src/common/repo/: base.py  interfaces.py
src/containers/: container.py  gateways.py  repos_container.py  use_cases.py
src/data/database/migrations/: env.py
src/data/database/migrations/versions/: 2022-12-04_08_52_9b1125c99599_init.py  2024-01-02_11_56_b37446742892_add_feedback_table.py  2024-01-20_11_36_bfa902e56da6_add_bot_session_table.py  2024-01-28_10_18_c06a814007e2_users_table_optional_username.py
src/data/models/: __init__.py  bot_session.py  feedback.py  news.py  rate.py  user.py  users.py
src/data/repositories/: bot.py  feedback.py  news.py  parse.py  rate.py  user.py  weather.py
src/domain/: utils.py
src/domain/bot/: interfaces.py
src/domain/handlers/: buttons.py  interfaces.py
src/domain/handlers/use_cases/: change_city.py  change_time_mailing.py  news.py  rate.py  start.py  weather.py
src/domain/mailing/use_cases/: bulk_mailing.py  mailing.py
src/domain/news/: interfaces.py
src/domain/news/dto/: base.py
src/domain/news/use_cases/: get_current_news.py  parse_last_news.py
src/domain/rate/: interfaces.py
src/domain/rate/dto/: base.py
src/domain/rate/use_cases/: get_current_rate.py  parse_current_rate.py
src/domain/user/: interfaces.py
src/domain/user/dto/: base.py
src/domain/user/use_cases/: feedback.py  get_or_create.py
src/domain/weather/: interfaces.py
src/domain/weather/dto/: base.py
src/domain/weather/use_cases/: get_city_weather.py  get_weather_forecast.py  get_weather_now.py
src/handlers/: __main__.py  buttons.py  handlers.py
src/worker/: commands.py  crons.py  tasks.py
tests/: conftest.py
tests/factories/: event.py  news.py  rate.py  user.py
tests/fixtures/: base.py
tests/test_handlers/: test_feedback.py  test_start_handler.py
tests/test_use_cases/: test_bulk_mailing.py
