[tool.poetry]
name = "mailing_bot"
version = "0.1.0"
description = ""
authors = ["Andrey Matveev"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
multi_line_output = 3
line_length = 100
include_trailing_comma = true

[tool.mypy]
# Mypy configuration:
# https://mypy.readthedocs.io/en/latest/config_file.html
allow_redefinition = false
check_untyped_defs = true
disallow_untyped_decorators = false
disallow_any_explicit = false
disallow_any_generics = false
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_errors = false
ignore_missing_imports = false
local_partial_types = true
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_no_return = true

exclude = "^(src.data.database.migrations).*$"
plugins = ["sqlalchemy.ext.mypy.plugin", "pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
  "telethon.*",
  "apscheduler.*",
  "factory.*",
  "pytest_async_sqlalchemy.*",
  "aiocache.*",
  "celery.*",

]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
  "tests/test_handlers",
  "tests/test_use_cases",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning"
]
asyncio_mode = "auto"

[tool.poetry.dependencies]
python = "^3.11"
dependency-injector = "^4.40.0"
pydantic = "^1.10.2"
sentry-sdk = "^1.9.8"
loguru = "^0.6.0"
Telethon = "^1.25.1"

# DB
SQLAlchemy = { version = ">=1.4,<2", extras = ["asyncio", "mypy"] }
SQLAlchemy-Utils = "~0.38.2"
alembic = {version = "~1.8.1", extras = ["tz"]}
asyncpg = ">=0.26.0"
psycopg2-binary = "^2.9.3"
greenlet = "~1.1.2"

# Cache
aiocache = "^0.11.1"
msgpack = "^1.0.4"
ujson = "^5.5.0"

# Typehinting
mypy = "~0.982"
mypy-extensions = "~0.4.3"

# Libs
httpx = "^0.23.0"
typer = { version = "^0.6.1", extras = ["all"] }
celery = "^5.2.7"
redis = "^4.3.1"
sqlalchemy-filterset = "^1.0.1"

[tool.poetry.dev-dependencies]
# Formatting
isort = "~5.10.1"
black = "^22.8.0"

# Stubs
sqlalchemy2-stubs = "~0.0.2-alpha.19"
python-dotenv = "~0.21.0"

# Tests
pytest = "~7.1.1"
pytest-asyncio = "~0.19.0"
pytest-async-sqlalchemy = "~0.2.0"
pytest-xdist = "~2.5.0"
factory-boy = "~3.2.1"
pytest-dotenv = "^0.5.2"
pytest-cov = "^3.0.0"
types-python-slugify = "^5.0.3"
pytest-unordered = "^0.4.1"
rich = "^12.5.1"
